--- a/generic.html
+++ b/generic.html
@@ -46,8 +46,8 @@
 									<span class="date"></span>
 									<h1>This is My<br />
 									Art Page</h1>
-									<p>I've been creating art since I was a kid, from around 7 years old I guess and it something that I totally love and it's something that keeps me sane
-										I sketch, paint in oil colors,acrylics, water colors and glass paints. Mainly sketching and painting on a canvas in what I currently do and what you would see in the images below.
+									<p>I've been creating art since I was a kid, from around 7 years old I guess and it is something that I totally love and something that keeps me sane too.
+									I sketch, paint in oil colors,acrylics, water colors and glass paints. Mainly sketching and painting on a canvas in what I currently do and what you would see in the images below.
 									I even have a diploma in Fine Arts! All I hope is to get better at it and have my art gain more recognition. </p>
 								</header>
 								<div class="image main"><img src="A2.jpg" alt="" /></div>
