--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
+								<div class="image main"><img src="IMG_12.jpg" alt="" /></div>
 								<header class="major">
 									<span class="date"></span>
 									<h2><a href="#">About Me<br />
