--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										
 										<ul>
 											<ol>Database Tools: MySQL</ol>
-											<ol>Visualization Tools: Tablaeu, Pythin Libraries
+											<ol>Visualization Tools: Tablaeu, Python Libraries
 											</ol>
 										</ul>
 										
