--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									</a></h2>
 									<p>Hi, I am Shivangi Sharma, a 3rd year Computer Science Engineering Student from Visvesvaraya Technological University. I've been immensely passionate and driven towards Data Science and Machine Learning for the past year, but recently Deep Learning and Computer Vision have started to grow on me. I always look for opportunities to dig deeper into the world of data and it's magnificence.
 									 Apart from this I am also into Problem Solving and Visualization Techniques. I am a quick learner and look forward to being a part of the ideas which have the power to bring about change. I am a Public Speaker and Creative Writer. It's my writing and oratory which give me the ability to voice my ideas and beliefs.
-									 I am also the Co-Organizer and Curator of TEDxCMRIT, Machine Learning Mentor and Content Curator Google DSC CMRIT, ex-Vice President Debating and Entertainment Club, Loyola School. I believe that technology has always had to power to transform lives for better and will continue to do the same. I just look forward to being an active contributor in bringing about these positive-life-altering changes.  </p>
+									 I am also the Co-Organizer and Curator of TEDxCMRIT, Machine Learning Mentor and Content Curator Google DSC CMRIT, ex-Vice President Debating and Entertainment Club, Loyola School. I believe that technology has always had to power to transform lives for better and will continue to do the same. I just look forward to being an active contributor in bringing about these positive life-altering changes.  </p>
 								</header>
 								<header class="major">
 									<span class="date"></span>
